# drl-zh

./: .dockerignore  .gitignore  00_Intro.ipynb  01_MDP.ipynb  02_RL.ipynb  03_DQN.ipynb  04_PG.ipynb  05_AC.ipynb  06_PPO.ipynb  07_Next.ipynb  08_EXPL.ipynb  09_MARL.ipynb  10_OFFL.ipynb  11_MCTS.ipynb  12_RLHF.ipynb  13_DTVLA.ipynb  14_PROD.ipynb  15_MBRL.ipynb  16_DR3AM.ipynb  17_META.ipynb  18_EOF.ipynb  AGENTS.md  Dockerfile  MANUAL.md  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
cpu/: pyproject.toml
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
extension/src/: aiClient.ts  aiCoordinator.ts  audioUtils.ts  constants.ts  contextTracker.ts  course.ts  extension.ts  kokoro-js.d.ts  kokoroTTS.ts  kokoroWorker.ts  learnerProfile.ts  llmProviders.ts  micRecorder.ts  moonshineSTT.ts  moonshineWorker.ts  notebookPrep.ts  onboardingHandler.ts  providers.ts  sessionManager.ts  signalRouter.ts  systemPrompts.ts  thoughtOrchestrator.ts  thoughtPolicy.ts  thoughtUtterance.ts  transcriptStore.ts  ttsClient.ts  userConfig.ts  webviewHtml.ts  webviewMessages.ts
extension/src/webview/: awarenessPill.js  chat.js  face.js  index.html  inputKey.js  markdown.js  style.css  thoughtCloud.js  tokenCounter.js  transcript.js  ttsPlayback.js  voiceCapture.js  voiceStatusReducer.js
extension/test/: aiClient.test.ts  aiCoordinator.test.ts  awarenessPill.test.ts  constants.test.ts  contextTracker.test.ts  extension.test.ts  face.test.ts  geminiProvider.test.ts  inputKey.test.ts  kokoroTTS.test.ts  learnerProfile.test.ts  markdown.test.ts  micRecorder.test.ts  moonshineSTT.test.ts  notebookPrep.test.ts  onboardingHandler.test.ts  providers.test.ts  sessionManager.test.ts  signalRouter.test.ts  stage1.ts  thoughtCloud.test.ts  thoughtOrchestrator.test.ts  thoughtPolicy.test.ts  thoughtUtterance.test.ts  tokenCounter.test.ts  transcript.test.ts  transcriptStore.test.ts  ttsClient.test.ts  ttsPlayback.test.ts  voiceCapture.test.ts  voiceStatusReducer.test.ts  webviewHtml.test.ts  webviewMessages.test.ts
extension/test/__mocks__/: vscode.ts
solution/: 01_MDP.ipynb  02_RL.ipynb  03_DQN.ipynb  04_PG.ipynb  06_PPO.ipynb  08_EXPL.ipynb  10_OFFL.ipynb  11_MCTS.ipynb  12_RLHF.ipynb  13_DTVLA.ipynb  14_PROD.ipynb  17_META.ipynb
util/: rl_algos.py
