[tool.poetry]
name = "drl-zh"
version = "2.0.0"
package-mode = false
description = "Deep Reinforcement Learning: Zero to Hero!"
authors = ["Alessio Della Motta <alessio.dellamotta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# Python is held at 3.13 because ale-py has no wheels for 3.14 yet (every other
# dependency here supports 3.14).
python = ">=3.13,<3.14"
gymnasium = { extras = [
    "atari",
    "box2d",
    "mujoco",
    "other",
], version = "^1.3.0" }
ale-py = "^0.11.2"
# pygame-ce is the maintained community fork; pettingzoo 1.26 and gymnasium 1.3
# both moved to it. It installs into the same `pygame` import namespace.
pygame-ce = "^2.5.7"
matplotlib = "^3.10.9"
ipykernel = "^7.2.0"
ipywidgets = "^8.1.8"
notebook = "^7.5.6"
moviepy = "^2.2.1"
mujoco = "^3.8.1"
torch = "^2.12.0"
pandas = "^3.0.3"
peft = "^0.19.1"
minigrid = "^3.1.0"
pettingzoo = "^1.26.1"
# MPE environments were split out of PettingZoo 1.26 into their own package.
mpe2 = "^1.1.0"
pymunk = "^7.2.0"
supersuit = "^3.10.0"
transformers = "^5.9.0"
# Adding the Poetry dependency to work within a virtual environment, and avoiding Poetry to
# uninstall itself when syncing deps with `install --sync`...
poetry = "^2.4.1"
seaborn = "^0.13.2"
ray = {extras = ["default"], version = "^2.55.1"}
optuna = "^4.8.0"
plotly = "^6.7.0"
kaleido = "^1.3.0"
tensorboard = "^2.20.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
